Changes in Version 1.9.6
  - Fixed a bug where rescale does not work with only one node

Changes in Version 1.9.5
  - Removed z-score warning ?centralityPlot

Changes in Version 1.9.4
  - Small fix for CRAN

Changes in Version 1.9.3
  - Fixed an issue with cor_auto when using FIML for missing data handling. Thanks to Kai Nehler.

Changes in Version 1.9.2
  - Fixed another bug in checking input class of qgraph.loadings

Changes in Version 1.9.1
  - Fixed a bug in checking input class of qgraph.loadings

Changes in Version 1.9
  - Removed unused dplyr import
  - Fixed a bug with manual color assignment
  - Fixed an issue with 'centrality_auto' on M1 chipped Mac computers

Changes in Version 1.8
  - The 'centralityPlot' and 'clusteringPlot' functions now use 'raw0' as default for the 'scale' argument, meaning that centrality and clustering coefficients are no longer standardized to z-scores by default.

Changes in Version 1.7.1
  - Fixed a bug with the flow() function
  - Added theme = "pride"

Changes in Version 1.7.0
  - The 'centrality()' function now includes R-squared (predictability)
  - 'qgraphAnnotate' has been removed due to CRAN removal of sendplot
  - Fixed a bug when using edges colored as probabilities with more than 20 nodes
  - the 'probCol' argument now defaults to "black"
  - Removed several dependencies
  - Removed 'as_ggraph' to reduce dependencies

Changes in Version 1.6.9
  - Fixed a bug where using qgraph on the output of qgraph did not use all arguments correctly

Changes in Version 1.6.8
  - Fixed a bug with legend not showing when edge labels are used.

Changes in Version 1.6.7
  - node labels are now colored white for lighter nodes with theme = "gray"
  - Added argument label.color.split

Changes in Version 1.6.6
  - Fixed a bug where the diagonal of undirected graphs was counted twice in getWmat
  - Fixed a bug with bnlearn as input

Changes in Version 1.6.5
  - Removed findGraph

Changes in Version 1.6.4